Started correcting overlapping sidebar to menu-toggle

--- a/main.css
+++ b/main.css
@@ -17,6 +17,10 @@ body {
     --clr-frost: hsl(192, 99%, 50%);
 }
 
+header {
+    height: 100px;
+}
+
 .memory-container {
     display: flex;
 }
@@ -168,13 +172,13 @@ input {
     display: none;
 }
 
-.menu,
-ul {
+.menu {
     border: 1px solid #cecfd5;
     border-radius: 6px;
 }
 
 .menu {
+    position: absolute;
     color: #0087cc;
     cursor: pointer;
     display: inline-block;
@@ -184,6 +188,31 @@ ul {
     transition: all .05s ease;
     width: 50px;
     height: 50px;
+    z-index: 999;
+}
+
+/* The max-height property defines the maximum height of an element. */
+/* If the content is larger than the maximum height, it will overflow. */
+/* sets the max height to 0. Since there is content inside the overflow property hides content */
+nav {
+    position: absolute;
+    display: inline-block;
+    max-height: 0;
+    overflow: hidden;
+    transition: all .05s ease;
+}
+
+/* Upon clicking the label, input/label box gains shadow and changes (gray) color */
+#toggle:checked + label {
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15);
+    /*color: #9799a7;*/
+    color: #1ece1e;
+}
+
+/* upon being check sets the max-height large enough to display content */
+#toggle:checked ~ nav {
+    max-height: 500px;
+    background-color: #eaeaea;
 }
 
 .menu:hover {
@@ -201,47 +230,16 @@ ul {
     background: none;
 }
 
-
-/* Upon clicking the label, input/label box gains shadow and changes (gray) color */
-#toggle:checked + label {
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15);
-    /*color: #9799a7;*/
-    color: #1ece1e;
-}
-
-/* The max-height property defines the maximum height of an element. */
-/* If the content is larger than the maximum height, it will overflow. */
-/* sets the max height to 0. Since there is content inside the overflow property hides content */
-nav {
-    max-height: 0;
-    overflow: hidden;
-    transition: all .05s ease;
-    position: fixed;
-}
-
-/* upon being check sets the max-height large enough to display content */
-#toggle:checked ~ nav {
-    max-height: 500px;
-}
-
 /* The rest of the configuration below styles the content */
 ul {
     list-style: none;
     margin: 8px 0 0 0;
     padding: 0;
-    width: 100px;
+    width: 300px;
 }
 
 li:first-child {
     height: 50px;
-}
-
-li {
-    border-bottom: 1px solid #cecfd5;
-}
-
-li:last-child {
-    border-bottom: 0;
 }
 
 a {
